👀 优化成环境变量
👀 优化成环境变量

Update config.py

--- a/src/lib/i18n/locales/zh-TW/translation.json
+++ b/src/lib/i18n/locales/zh-TW/translation.json
@@ -242,6 +242,8 @@
 	"Enter Image Size (e.g. 512x512)": "輸入圖片大小（例如 512x512）",
 	"Enter language codes": "輸入語言代碼",
 	"Enter model tag (e.g. {{modelTag}})": "輸入模型標籤（例如 {{modelTag}}）",
+	"Enter MAX FILE COUNT": "单次上傳最大檔案數量",
+	"Enter MAX FILE SIZE(MB)": "单次上傳最大檔案大小(MB)",
 	"Enter Number of Steps (e.g. 50)": "輸入步數（例如 50）",
 	"Enter Score": "輸入分數",
 	"Enter Searxng Query URL": "輸入 Searxng 查詢 URL",
@@ -372,6 +374,8 @@
 	"Manage Pipelines": "管理管線",
 	"Manage Valves": "管理閥門",
 	"March": "3 月",
+	"MAX FILE COUNT": "最大檔案數量",
+	"MAX FILE SIZE(MB)": "最大檔案大小",
 	"Max Tokens (num_predict)": "最大 Token（num_predict）",
 	"Maximum of 3 models can be downloaded simultaneously. Please try again later.": "最多可以同時下載 3 個模型。請稍後再試。",
 	"May": "5 月",
