--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -239,6 +239,8 @@
 	"Enter Image Size (e.g. 512x512)": "Masukkan Ukuran Gambar (mis. 512x512)",
 	"Enter language codes": "Masukkan kode bahasa",
 	"Enter model tag (e.g. {{modelTag}})": "Masukkan tag model (misalnya {{modelTag}})",
+	"Enter Max File Count": "",
+	"Enter Max File Size(MB)": "",
 	"Enter Number of Steps (e.g. 50)": "Masukkan Jumlah Langkah (mis. 50)",
 	"Enter Score": "Masukkan Skor",
 	"Enter Searxng Query URL": "Masukkan URL Kueri Searxng",
@@ -278,6 +280,7 @@
 	"File": "Berkas",
 	"File Mode": "Mode File",
 	"File not found.": "File tidak ditemukan.",
+	"File size exceeds the limit of {{size}}MB": "",
 	"Files": "",
 	"Filter is now globally disabled": "Filter sekarang dinonaktifkan secara global",
 	"Filter is now globally enabled": "Filter sekarang diaktifkan secara global",
@@ -366,6 +369,8 @@
 	"Manage Pipelines": "Mengelola Saluran Pipa",
 	"Manage Valves": "Kelola Katup",
 	"March": "Maret",
+	"Max File Count": "",
+	"Max File Size(MB)": "",
 	"Max Tokens (num_predict)": "Token Maksimal (num_prediksi)",
 	"Maximum of 3 models can be downloaded simultaneously. Please try again later.": "Maksimal 3 model dapat diunduh secara bersamaan. Silakan coba lagi nanti.",
 	"May": "Mei",
@@ -430,6 +435,7 @@
 	"On": "Aktif",
 	"Only": "Hanya",
 	"Only alphanumeric characters and hyphens are allowed in the command string.": "Hanya karakter alfanumerik dan tanda hubung yang diizinkan dalam string perintah.",
+	"Only the first {{count}} files will be processed.": "",
 	"Oops! Hold tight! Your files are still in the processing oven. We're cooking them up to perfection. Please be patient and we'll let you know once they're ready.": "Ups! Pegangan yang kuat! File Anda masih berada di dalam oven pemrosesan. Kami sedang memasaknya hingga sempurna. Mohon bersabar dan kami akan memberi tahu Anda jika sudah siap.",
 	"Oops! Looks like the URL is invalid. Please double-check and try again.": "Ups! Sepertinya URL tidak valid. Mohon periksa ulang dan coba lagi.",
 	"Oops! There was an error in the previous response. Please try again or contact admin.": "Ups! Ada kesalahan pada respons sebelumnya. Silakan coba lagi atau hubungi admin.",
