--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -239,6 +239,8 @@
 	"Enter Image Size (e.g. 512x512)": "Geben Sie die Bildgröße ein (z. B. 512x512)",
 	"Enter language codes": "Geben Sie die Sprachcodes ein",
 	"Enter model tag (e.g. {{modelTag}})": "Gebn Sie den Model-Tag ein",
+	"Enter Max File Count": "",
+	"Enter Max File Size(MB)": "",
 	"Enter Number of Steps (e.g. 50)": "Geben Sie die Anzahl an Schritten ein (z. B. 50)",
 	"Enter Score": "Punktzahl eingeben",
 	"Enter Searxng Query URL": "Geben Sie die Searxng-Abfrage-URL ein",
@@ -278,6 +280,7 @@
 	"File": "Datei",
 	"File Mode": "Datei-Modus",
 	"File not found.": "Datei nicht gefunden.",
+	"File size exceeds the limit of {{size}}MB": "",
 	"Files": "",
 	"Filter is now globally disabled": "Filter ist jetzt global deaktiviert",
 	"Filter is now globally enabled": "Filter ist jetzt global aktiviert",
@@ -366,6 +369,8 @@
 	"Manage Pipelines": "Pipelines verwalten",
 	"Manage Valves": "Valves verwalten",
 	"March": "März",
+	"Max File Count": "",
+	"Max File Size(MB)": "",
 	"Max Tokens (num_predict)": "Maximale Tokenanzahl (num_predict)",
 	"Maximum of 3 models can be downloaded simultaneously. Please try again later.": "Es können maximal 3 Modelle gleichzeitig heruntergeladen werden. Bitte versuchen Sie es später erneut.",
 	"May": "Mai",
@@ -430,6 +435,7 @@
 	"On": "Ein",
 	"Only": "Nur",
 	"Only alphanumeric characters and hyphens are allowed in the command string.": "In der Befehlszeichenfolge sind nur alphanumerische Zeichen und Bindestriche erlaubt.",
+	"Only the first {{count}} files will be processed.": "",
 	"Oops! Hold tight! Your files are still in the processing oven. We're cooking them up to perfection. Please be patient and we'll let you know once they're ready.": "Ups! Bitte gedulden Sie sich einen Moment! Ihre Dateien sind noch in der Verarbeitung. Wir bereiten sie sorgfältig vor. Bitte haben Sie etwas Geduld, und wir werden Sie benachrichtigen, sobald sie fertig sind.",
 	"Oops! Looks like the URL is invalid. Please double-check and try again.": "Hoppla! Es scheint, dass die URL ungültig ist. Bitte überprüfen Sie diese und versuchen Sie es erneut.",
 	"Oops! There was an error in the previous response. Please try again or contact admin.": "Hoppla! Es gab einen Fehler in der vorherigen Antwort. Bitte versuchen Sie es erneut oder kontaktieren Sie den Administrator.",
