--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -239,6 +239,8 @@
 	"Enter Image Size (e.g. 512x512)": "ใส่ขนาดภาพ (เช่น 512x512)",
 	"Enter language codes": "ใส่รหัสภาษา",
 	"Enter model tag (e.g. {{modelTag}})": "ใส่แท็กโมเดล (เช่น {{modelTag}})",
+	"Enter Max File Count": "",
+	"Enter Max File Size(MB)": "",
 	"Enter Number of Steps (e.g. 50)": "ใส่จำนวนขั้นตอน (เช่น 50)",
 	"Enter Score": "ใส่คะแนน",
 	"Enter Searxng Query URL": "ใส URL การค้นหาของ Searxng",
@@ -278,6 +280,7 @@
 	"File": "ไฟล์",
 	"File Mode": "โหมดไฟล์",
 	"File not found.": "ไม่พบไฟล์",
+	"File size exceeds the limit of {{size}}MB": "",
 	"Files": "ไฟล์",
 	"Filter is now globally disabled": "การกรองถูกปิดใช้งานทั่วโลกแล้ว",
 	"Filter is now globally enabled": "การกรองถูกเปิดใช้งานทั่วโลกแล้ว",
@@ -366,6 +369,8 @@
 	"Manage Pipelines": "จัดการไปป์ไลน์",
 	"Manage Valves": "จัดการวาล์ว",
 	"March": "มีนาคม",
+	"Max File Count": "",
+	"Max File Size(MB)": "",
 	"Max Tokens (num_predict)": "โทเค็นสูงสุด (num_predict)",
 	"Maximum of 3 models can be downloaded simultaneously. Please try again later.": "สามารถดาวน์โหลดโมเดลได้สูงสุด 3 โมเดลในเวลาเดียวกัน โปรดลองอีกครั้งในภายหลัง",
 	"May": "พฤษภาคม",
@@ -430,6 +435,7 @@
 	"On": "เปิด",
 	"Only": "เท่านั้น",
 	"Only alphanumeric characters and hyphens are allowed in the command string.": "อนุญาตให้ใช้เฉพาะอักขระตัวอักษรและตัวเลข รวมถึงเครื่องหมายขีดกลางในสตริงคำสั่งเท่านั้น",
+	"Only the first {{count}} files will be processed.": "",
 	"Oops! Hold tight! Your files are still in the processing oven. We're cooking them up to perfection. Please be patient and we'll let you know once they're ready.": "อุ๊บส์! ช้าก่อน! ไฟล์ของคุณยังอยู่ในขั้นตอนการประมวลผล เรากำลังจัดการให้สมบูรณ์แบบ โปรดอดทนสักครู่ แล้วเราจะแจ้งให้คุณทราบเมื่อไฟล์พร้อมแล้ว",
 	"Oops! Looks like the URL is invalid. Please double-check and try again.": "อุ๊บส์! ดูเหมือนว่า URL ไม่ถูกต้อง กรุณาตรวจสอบและลองใหม่อีกครั้ง",
 	"Oops! There was an error in the previous response. Please try again or contact admin.": "อุ๊บส์! มีข้อผิดพลาดในคำตอบก่อนหน้า กรุณาลองใหม่อีกครั้งหรือติดต่อผู้ดูแลระบบ",
